rename model types in GORM
