# mentor/backend/src/docs/swagger_template.json
@@ -32,7 +32,7 @@
                     {
                         "type": "string",
                         "description": "Filter by user ID",
-                        "name": "user_id",
+                        "name": "userid",
                         "in": "query"
                     },
                     {
@@ -271,7 +271,7 @@
         "models.DeviceAlert": {
             "type": "object",
             "properties": {
-                "device_id": {
+                "deviceid": {
                     "type": "string"
                 },
                 "id": {
@@ -348,7 +348,7 @@
                     "description": "CPU metrics",
                     "type": "number"
                 },
-                "device_id": {
+                "deviceid": {
                     "type": "string"
                 },
                 "disk_total": {
